--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "image-processing-app",
+  "type": "module",
+  "name": "project",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -39,7 +40,6 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.39.8",
-    "@types/react-qr-reader": "^2.1.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -53,7 +53,6 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^7.3.0",
     "react-webcam": "^7.2.0",
