--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,20 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "module": "commonjs",
+    "module": "esnext",
     "target": "es2020",
-    "esModuleInterop": true,
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "jsx": "react-jsx",
+    "allowJs": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "incremental": true
   }
 }
